ci: :green_heart: fix CI paths trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,16 @@ name: net CI
 on:
   push:
     paths:
-      - "**/{.github/workflows/*.yml,*.hpp,*.cpp,CMakeLists.txt}"
+      - "**ci.yml"
+      - "**.hpp"
+      - "**.cpp"
+      - "**CMakeLists.txt"
   pull_request:
     paths:
-      - "**/{.github/workflows/*.yml,*.hpp,*.cpp,CMakeLists.txt}"
+      - "**ci.yml"
+      - "**.hpp"
+      - "**.cpp"
+      - "**CMakeLists.txt"
 
 jobs:
   linux:
