--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,11 +58,10 @@ jobs:
       fail-fast: false
       matrix:
         arch: [x64, x86]
-        mode: [Release, Debug]
-        os: ["windows-2019", "windows-2022"]
+        config: [Release, Debug]
 
-    name: "Windows ${{matrix.arch}}-${{matrix.mode}}"
-    runs-on: ${{matrix.os}}
+    name: "Windows ${{matrix.arch}}-${{matrix.config}}-vs2022"
+    runs-on: windows-2022
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -70,19 +69,20 @@ jobs:
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v1.1
 
-      - name: Install Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
+      - name: Get number of CPU cores
+        uses: SimenB/github-actions-cpu-cores@v1
+        id: cpu-cores
 
       - name: Configure CMake (x64)
         if: ${{ matrix.arch == 'x64' }}
-        run: cmake -S . -B build -G Ninja
+        run: cmake -S . -B build -G "Visual Studio 17 2022"
 
       - name: Configure CMake (x86)
         if: ${{ matrix.arch == 'x86' }}
-        run: cmake -S . -B build -G Ninja -A Win32 -T host=x86
+        run: cmake -S . -B build -G "Visual Studio 17 2022" -A Win32 -T host=x86
 
       - name: Build
-        run: cmake --build build --config ${{matrix.mode}}
+        run: cmake --build build --config ${{matrix.config}} --parallel ${{steps.cpu-cores.outputs.cores}}
 
       - name: Package
         run: cd build && cpack --verbose
@@ -90,5 +90,5 @@ jobs:
       - name: Upload Binary
         uses: actions/upload-artifact@v3
         with:
-          name: "libnet - Windows ${{matrix.arch}}-${{matrix.mode}}"
+          name: "libnet - Windows ${{matrix.arch}}-${{matrix.config}}-vs2022"
           path: "${{github.workspace}}/build/*.zip"
