--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,10 +69,6 @@ jobs:
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v1.1
 
-      - name: Get number of CPU cores
-        uses: SimenB/github-actions-cpu-cores@v1
-        id: cpu-cores
-
       - name: Configure CMake (x64)
         if: ${{ matrix.arch == 'x64' }}
         run: cmake -S . -B build -G "Visual Studio 17 2022"
@@ -82,7 +78,7 @@ jobs:
         run: cmake -S . -B build -G "Visual Studio 17 2022" -A Win32 -T host=x86
 
       - name: Build
-        run: cmake --build build --config ${{matrix.config}} --parallel ${{steps.cpu-cores.outputs.cores}}
+        run: cmake --build build --config ${{matrix.config}}
 
       - name: Package
         run: cd build && cpack -C ${{matrix.config}} --verbose
