--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,16 @@
 name: net CI
 on:
   push:
+    branches:
+      - main
     paths:
       - "**ci.yml"
       - "**.hpp"
       - "**.cpp"
       - "**CMakeLists.txt"
   pull_request:
+    branches:
+      - main
     paths:
       - "**ci.yml"
       - "**.hpp"
