--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,5 +6,7 @@ file(GLOB_RECURSE examples "*.cpp")
 foreach(example ${examples})
     get_filename_component(example_name ${example} NAME_WE)
     add_executable(${example_name} ${example})
-    target_link_libraries(${example_name} PRIVATE ${CMAKE_PROJECT_NAME})
+    target_link_libraries(
+        ${example_name} PRIVATE ${CMAKE_PROJECT_NAME} Threads::Threads
+    )
 endforeach()
